Borders and icons fix for Windows' high contrast mode (#619)

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -81,6 +81,12 @@
   padding-right: 1.75rem;
 }
 
+@media screen and (forced-colors: active) {
+  .facet-filters__sort {
+    border: none;
+  }
+}
+
 .facet-filters__sort,
 .facet-filters__sort:hover {
   box-shadow: none;
@@ -261,6 +267,17 @@
 
 .facet-checkbox > input[type='checkbox']:checked ~ .icon-checkmark {
   visibility: visible;
+}
+
+@media screen and (forced-colors: active) {
+  .facet-checkbox > svg {
+    background-color: inherit;
+    border: 0.1rem solid rgb(var(--color-background));
+  }
+
+  .facet-checkbox > input[type='checkbox']:checked ~ .icon-checkmark {
+    border: none;
+  }
 }
 
 .facet-checkbox--disabled {
