--- a/assets/component-loading-overlay.css
+++ b/assets/component-loading-overlay.css
@@ -43,6 +43,12 @@
   animation: dash 1.4s ease-in-out infinite;
 }
 
+@media screen and (forced-colors: active) {
+  .path{
+    stroke: CanvasText;
+  }
+}
+
 @keyframes dash {
   0% {
     stroke-dashoffset: 280;
