--- a/assets/customer.css
+++ b/assets/customer.css
@@ -71,6 +71,13 @@
   }
 }
 
+@media screen and (forced-colors: active) {
+  .customer table {
+    border-top: 0.1rem solid transparent;
+    border-bottom: 0.1rem solid transparent;
+  }
+}
+
 .customer tbody {
   color: rgb(var(--color-foreground));
 }
@@ -156,6 +163,12 @@
   }
 }
 
+@media screen and (forced-colors: active) {
+  .customer tbody tr {
+    border-top: 0.1rem solid transparent;
+  }
+}
+
 .customer tfoot td:first-of-type,
 .customer tfoot td {
   padding-top: 0.6rem;
@@ -198,6 +211,13 @@
   position: absolute;
   left: 0;
   background: rgba(var(--color-foreground), 0.08);
+}
+
+@media screen and (forced-colors: active) {
+  .customer thead::after,
+  .customer tfoot::before {
+    background: CanvasText;
+  }
 }
 
 /* mobile table overrides */
@@ -464,6 +484,7 @@
   padding: 1.1rem 1.5rem;
   text-decoration: none;
   box-shadow: 0 0 0 0.1rem rgba(var(--color-link), 0.2);
+  border: 0.1rem solid transparent;
   font-size: 1.2rem;
 }
 
